--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Twitter</span></a></li>
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
 						<!--<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
-						<!--<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
+						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 						<li><a title="CV" href="files/YongHan_Lin_CV.pdf" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 				</div>
@@ -92,7 +92,7 @@
 							 
 					</p>
 					<p>	
-						<div style="color:red;">📢 I'm looking for a Ph.D. position starting in 2025 Fall! 
+						<div style="color:red;">📢 I'm looking for a Ph.D. position in HCI for 2025 Fall! 
 						 If you know of any opportunities that might be a good fit, please talk to me at UbiComp/ISWC 2024 (in Melbourne) or send me an email. 
 						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>
