--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 8,<br>2024</th>
 								<td>
-									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present paper <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features</a>!
+									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present paper <a href="files/NotiManager_Evaluation_IMWUT_2024.pdf" target="_blank">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features</a>!
 									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of our research and NotiManager, the application developed for this research!
 								</td>
 							</tr>
