--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							 
 					</p>
 					<p>	
-						<div style="color:red;">📢 I'm looking for a Ph.D. position in HCI for 2025 Fall! 
+						<div style="color:red;">📢 I'm applying for Ph.D. in HCI starting in 2025 Fall! 
 						 If you know of any opportunities that might be a good fit, please talk to me at UbiComp/ISWC 2024 (in Melbourne) or send me an email. 
 						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>
@@ -119,20 +119,20 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 2,<br>2024</th>
 								<td>
-									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting <a href="./files/Alert_Assistance_MobileHCI_2024" target="_blank">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications</a>!
+									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting <a href="files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications</a>!
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Jul 2,<br>2024</th>
 								<td>
-									One paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024" target="_blank">notification management</a> is accepted to IMWUT (UbiComp) 2024! 
+									One paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024.pdf" target="_blank">notification management</a> is accepted to IMWUT (UbiComp) 2024! 
 									Many thanks to my collaborators! 🎉
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Jun 18,<br>2024</th>
 								<td>
-									One paper on <a href="./files/Alert_Assistance_MobileHCI_2024" target="_blank">assigning meanings to notification alerts</a> is accepted to MobileHCI 2024! 
+									One paper on <a href="./files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">assigning meanings to notification alerts</a> is accepted to MobileHCI 2024! 
 									Congrats to the co-authors! 
 								</td>
 							</tr>
@@ -145,7 +145,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 10,<br>2023</th>
 								<td>
-									Presented my leading project <a href="./files/NotiManager_UbiComp_2023" target="_blank">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management</a> as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
+									Presented my leading project <a href="./files/NotiManager_UbiComp_2023.pdf" target="_blank">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management</a> as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
 								</td>
 							</tr>
 							<tr>
@@ -157,7 +157,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Jan 14,<br>2023</th>
 								<td>
-									One paper on <a href="./files/Multi_Device_Noti_CHI_2023" target="_blank">cross-device notification interaction</a> is accepted to CHI 2023! 
+									One paper on <a href="./files/Multi_Device_Noti_CHI_2023.pdf" target="_blank">cross-device notification interaction</a> is accepted to CHI 2023! 
 									Enjoy working on this project, congrats to all the co-authors! 
 								</td>
 							</tr>
