--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					</p>
 					<p>	
 						<div style="color:red;">📢 I'm applying for Ph.D. in HCI starting in 2025 Fall! 
-						 If you know of any opportunities that might be a good fit, please talk to me at UbiComp/ISWC 2024 (in Melbourne) or send me an email. 
+						 If you know of any opportunities that might be a good fit, please send me an email. 
 						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>
 					<p>					
