--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 					</p>
 					<p>
 						In the past, I did my undergrad in computer science at the <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
-						I was fortunate to have two remote research internship experiences during my undergrad. One was in the UC Davis Collaborative and Social Computing Lab, where I worked on supporting the peer review process using chatbots. 
-						The other was in the <img class="logo" style="width:20px; height:20px; vertical-align: sub; margin: 0 0 0 3px;" src="images/hcd_lab_logo.png"> Polytechnique Montréal Human-Centered Design Lab, where I investigated the use of visual artifacts in open-source software issue threads
+						I also worked in the<!--<img class="logo" style="width:20px; height:20px; vertical-align: sub; margin: 0 0 0 3px;" src="images/hcd_lab_logo.png">--> Polytechnique Montréal Human-Centered Design Lab as a research intern, 
+						and at Xaduro (a travel tech startup) as a software engineering intern.
 							 
 					</p>
 					<p>	
