--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							 
 					</p>
 					<p>	
-						<div style="color:red;">📢 I'm applying for M.S./Ph.D. starting in 2025 Fall! 
+						<div style="color:red;">📢 I'm applying for Ph.D./M.S.(research-based) starting in 2025 Fall! 
 						 If you know of any opportunities that might be a good fit, please send me an email. 
 						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>
@@ -377,7 +377,7 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="copyright">
-					<li>&copy; 2024 Yong-Han Lin. </li>
+					<li>&copy; 2025 Yong-Han Lin. </li>
 					<li>Design: <a href="http://html5up.net" target="_blank" class="footer_button">HTML5 UP</a>.</li>
 				</ul>
 			</div>
