--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</p>
 					<p>
 						My research interests lie in human-computer interaction (HCI) and human-centered AI.
-						I am interested in designing, building, and studying technologies that empower end-users. 
+						I am interested in designing, building, and studying technologies that empower end-users to consume and interact with digital information effectively without distractions.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
 						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
@@ -218,8 +218,8 @@
 								<span style="font-weight: 600;color: #035772;"><i class="fas fa-caret-square-down" style="padding:0 4px 0 0;font-size:17px;vertical-align: middle;"></i></span><a class="abs_trigger" id="abs_auto_manual" style="cursor: pointer;">Abstract</a>
 								<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-alt" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span><a href="files/NotiManager_UbiComp_2023.pdf" target="_blank">PDF</a> 
 								<span style="font-weight: 600;color: #035772;"><i class="ai ai-acmdl-square" style="padding:0 4px 0 10px;font-size:19px;vertical-align: middle;"></i></span><a href="https://dl.acm.org/doi/abs/10.1145/3594739.3610699" target="_blank">ACM DL</a> 
-								<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-image" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span>
-								<a href="files/NotiManager_UbiComp_2023_Poster.pdf" target="_blank">Poster</a> 
+								<!--<span style="font-weight: 600;color: #035772;"><i class="fas fa-file-image" style="padding:0 4px 0 10px;font-size:17px;vertical-align: middle;"></i></span>
+								<a href="files/NotiManager_UbiComp_2023_Poster.pdf" target="_blank">Poster</a> -->
 							</div></li>
 							<!--<li><div class="trigger mobile_notifications ubiquitous_devices system_evaluation trigger social_support" id="notimanager" style="margin-bottom: 5px; padding: 5px;"><span style="font-weight: 600;color: #035772;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
 								 <br>
