--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					</p>
 					<p>
 						My research interests lie in human-computer interaction (HCI) and human-centered AI.
-						I am interested in designing, building, and studying technologies that empower end-users to consume and interact with digital information effectively without distractions.
+						I am interested in studying, designing, and building technologies that empower users to consume and interact with digital information without feeling overwhelmed.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
 						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
