--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					
 					</p>
 					<p>
-						In the past, I did my undergrad in computer science at the <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University). 
+						In the past, I did my undergrad in computer science at the <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University) in Taiwan. 
 						I also worked in the<!--<img class="logo" style="width:20px; height:20px; vertical-align: sub; margin: 0 0 0 3px;" src="images/hcd_lab_logo.png">--> Polytechnique Montréal Human-Centered Design Lab as a research intern, 
 						and at Xaduro (a travel tech startup) as a software engineering intern.
 							 
@@ -112,14 +112,15 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 8,<br>2024</th>
 								<td>
-									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present paper <a href="files/NotiManager_Evaluation_IMWUT_2024.pdf" target="_blank">Pinning, Sorting, and Categorizing Notifications: A Mixed-methods Usage and Experience Study of Mobile Notification-management Features</a>!
+									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present my paper!
 									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of our research and NotiManager, the application developed for this research!
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 2,<br>2024</th>
 								<td>
-									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting <a href="files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">"I Want Lower Tone for Work-Related Notifications": Exploring the Effectiveness of User-Assigned Notification Alerts in Improving User Speculation of and Attendance to Mobile Notifications</a>!
+									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting paper! 
+									Thanks to my co-authors and the organizers for this opportunity!
 								</td>
 							</tr>
 							<tr>
@@ -145,7 +146,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 10,<br>2023</th>
 								<td>
-									Presented my leading project <a href="./files/NotiManager_UbiComp_2023.pdf" target="_blank">Automatic, Manual, or Hybrid? A Preliminary Investigation of Users’ Perception of Features for Supporting Notification Management</a> as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
+									Presented my leading project as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
 								</td>
 							</tr>
 							<tr>
