--- a/index.html
+++ b/index.html
@@ -72,27 +72,27 @@
 				<header class="major">
 		
 					<p>
-						Hi! I am Yong-Han, currently a human-computer interaction researcher in the <img class="logo" src="images/NotiManager/lab_logo.jpg">Mobile and Ubiquitous Interaction Lab. 
+						Hi! I am Yong-Han, currently a post-undergrad researcher in the <img class="logo" src="images/NotiManager/lab_logo.jpg">Mobile and Ubiquitous Interaction Lab. 
 						I am privileged to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a>.
 					</p>
 					<p>
-						My research interests lie in human-computer interaction (HCI) and human-centered AI.
-						I am interested in studying, designing, and building technologies that empower users to consume and interact with digital information without feeling overwhelmed.
+						My research interests lie in human-computer interaction (HCI).
+						I am interested in designing, building, and studying interactive systems that empower users to consume and interact with digital information effectively.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
-						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in handling notifications. 
+						In my recent work, I designed and built a <a href="./notimanager" target="_blank">notification management system</a> to facilitate users' workflows in reading and handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
 						I also studied users' experiences with this system by using mixed-methods. 
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
 					
 					</p>
 					<p>
-						In the past, I did my undergrad in computer science at the <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University) in Taiwan. 
-						I also worked in the<!--<img class="logo" style="width:20px; height:20px; vertical-align: sub; margin: 0 0 0 3px;" src="images/hcd_lab_logo.png">--> Polytechnique Montréal Human-Centered Design Lab as a research intern, 
+						In the past, I did my undergrad in computer science at <img class="logo" src="images/nycu_logo.png"><a href="https://www.nycu.edu.tw/nycu/en/index" target="_blank">National Yang-Ming Chiao-Tung University</a> (former: National Chiao-Tung University) in Taiwan. 
+						I also worked in the<!--<img class="logo" style="width:20px; height:20px; vertical-align: sub; margin: 0 0 0 3px;" src="images/hcd_lab_logo.png">--> Human-Centered Design Lab at Polytechnique Montréal as a research intern, 
 						and at Xaduro (a travel tech startup) as a software engineering intern.
 							 
 					</p>
 					<p>	
-						<div style="color:red;">📢 I'm applying for Ph.D./M.S.(research-based) starting in 2025 Fall! 
+						<div style="color:red;">📢 I'm applying for Ph.D. and research-based M.S. starting in 2025 Fall! 
 						 If you know of any opportunities that might be a good fit, please send me an email. 
 						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>
@@ -120,7 +120,7 @@
 								<th scope="row" style="width: 80px;">Oct 2,<br>2024</th>
 								<td>
 									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting paper! 
-									Thanks to my co-authors and the organizers for this opportunity!
+									Thanks to my co-authors and the conference organizers for this opportunity!
 								</td>
 							</tr>
 							<tr>
