--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 						I am privileged to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a>.
 					</p>
 					<p>
-						My research interests lie in human-AI interaction.
-						I am interested in designing, building, and studying interactive AI systems that empower users to consume and interact with digital information effectively.
+						My research interests lie in human-computer interaction.
+						I am interested in designing, building, and studying interactive systems that empower users to consume and interact with digital information effectively.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
 						In my recent work, I designed and built a <a href="./notimanager" target="_blank">intelligent notification system</a> to facilitate users' workflows in reading and handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
