--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					</ul>
 					<ul class="icons">
 						<li><a title="Email" href="mailto:yon9hanlin@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Twitter</span></a></li>
+						<li><a title="X (Twitter)" href="https://x.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">X (Twitter)</span></a></li>
+						<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
 						<!--<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
@@ -182,7 +182,7 @@
 			<!-- Publications -->
 			<section id="publications" class="section_topic">
 				<h2>Publications</h2>
-				<h5><span style="font-weight: 600;">Keywords:</span>
+				<h5><span style="font-weight: 600;">Research Interests:</span>
 					<a class="topic_trigger" id="topic_trigger_experience_sampling_method" style="cursor: pointer;"><span style="color: #035772;">human-AI interaction</span></a> / 
 					<a class="topic_trigger" id="topic_trigger_system_evaluation" style="cursor: pointer;"><span style="color: #035772;">user empowerment</span></a> /
 					<a class="topic_trigger" id="topic_trigger_mobile_notifications" style="cursor: pointer;"><span style="color: #035772;">mobile notifications</span></a> / 
