--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					</ul>
 					<ul class="icons">
 						<li><a title="Email" href="mailto:yon9hanlin@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a title="X (Twitter)" href="https://x.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">X (Twitter)</span></a></li>
-						<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
+						<!--<li><a title="X (Twitter)" href="https://x.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">X (Twitter)</span></a></li>-->
+						<!--<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>-->
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
 						<!--<li><a title="Github" href="https://github.com/yonghanlin" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>-->
 						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
@@ -72,7 +72,7 @@
 				<header class="major">
 		
 					<p>
-						Hi! I am Yong-Han, currently a post-undergrad researcher in the <img class="logo" src="images/NotiManager/lab_logo.jpg">Mobile and Ubiquitous Interaction Lab. 
+						Hi! I am Yong-Han, currently a post-undergrad researcher working on improving people's mobile experiences and their use of mobile media.
 						I am privileged to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a>.
 					</p>
 					<p>
@@ -109,6 +109,12 @@
 				<div class="row" style="height: 200px; overflow-y : scroll; -webkit-overflow-scrolling: touch;">
 					<table class="table">
 						<tbody>
+							<tr>
+								<th scope="row" style="width: 80px;">Mar. 14,<br>2025</th>
+								<td>
+									One paper received minor revisions in the first review round for MobileHCI 2025! Congrats to the co-authors for their hard work!
+								</td>
+							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 8,<br>2024</th>
 								<td>
