--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<header class="major">
 		
 					<p>
-						Hi! I am Yong-Han, an incoming master's student in Computer Science at the <img class="logo" src="images/uiuc_logo.png"><a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. Before starting my graduate studies, I work on research projects that aim to improve people's mobile experiences and their use of mobile media.
+						Hi! I am Yong-Han, an incoming master's student in <a href="https://siebelschool.illinois.edu/" target="_blank">Computer Science</a> at the <img class="logo" src="images/uiuc_logo.png"><a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. Before starting my graduate studies, I work on research projects that aim to improve people's mobile experiences and their use of mobile media.
 						I am fortunate to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a>.
 					</p>
 					<p>
