--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 						I am fortunate to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a>.
 					</p>
 					<p>
-						As a student researcher and software engineer, I focus on projects related to advancing human-computer interaction and the use of machine learning. 
-						I design, build, and study user-centered intelligent systems. My goal is to empower users to consume and interact with digital information and technology more effectively.
+						As a student researcher and software engineer, I focus on projects related to advancing human-computer interaction and the use of machine learning models. 
+						I design, build, and study intelligent systems to enhance human abilities. My goal is to empower users to consume and interact with digital information and technology more effectively.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
-						In my recent work, I designed and built a <a href="./notimanager" target="_blank">intelligent notification system</a> to facilitate users' workflows in reading and handling notifications. 
+						In my recent work, I designed and built an <a href="./notimanager" target="_blank">intelligent notification system</a> to facilitate users' workflows in reading and handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
 						I also studied users' experiences with this system by using mixed-methods. 
 						<!--As a HCI researcher, I envision a future where every automated system is intelligent enough to understand and adapt to the unique needs of individuals across various contexts while also enabling each user to have autonomy over its use.-->
