--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</p>
 					<p>
 						As a student researcher and software engineer, I focus on projects related to advancing human-computer interaction and the use of machine learning models. 
-						I design, build, and study intelligent systems to enhance human abilities. My goal is to empower users to consume and interact with digital information and technology more effectively.
+						I design, build, and study intelligent systems to empower users to consume and interact with digital information and technology more effectively.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
 						In my recent work, I designed and built an <a href="./notimanager" target="_blank">intelligent notification system</a> to facilitate users' workflows in reading and handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
