--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="inner">
 				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl enjoying a beautiful day and smiling at Malibu Beach." /></div>
 				<div id="main_name">
-				Yong-Han Lin / 林詠涵 &nbsp;<img class="logo" src="images/taiwan.png">
+				Yong-Han Lin / 林詠涵 <!--&nbsp;<img class="logo" src="images/taiwan.png">-->
 				</div>
 				<div id="self_intro">
 					<!--<div style="font-style: italic;">I am passionate about HCI research!</div>-->
@@ -72,9 +72,9 @@
 				<header class="major">
 		
 					<p>
-						Hi! I am Yong-Han, an incoming master's student in <a href="https://siebelschool.illinois.edu/" target="_blank">Computer Science</a> at the <img class="logo" src="images/uiuc_logo.png"><a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. 
-						Before starting my graduate studies, I am working on research projects that support researchers in analyzing people's use of mobile media, aiming to ultimately improve people's experiences with their phones.
-						I am fortunate to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju (Stanley) Chang</a>.
+						Hi! I am Yong-Han, a first-year master's student in <a href="https://siebelschool.illinois.edu/" target="_blank">Computer Science</a> at the <img class="logo" src="images/uiuc_logo.png"><a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. 
+						Before starting my graduate studies, I worked on research projects that support researchers in analyzing people's use of mobile media, aiming to ultimately improve people's experiences with their phones.
+						I am fortunate to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju Chang</a>.
 					</p>
 					<p>
 						As a student researcher and software engineer, I focus on projects related to advancing human-computer interaction and the use of machine learning models. 
@@ -111,45 +111,51 @@
 					<table class="table">
 						<tbody>
 							<tr>
-								<th scope="row" style="width: 80px;">Aug. 25,<br>2025</th>
+								<th scope="row" style="width: 80px;">Aug 25,<br>2025</th>
 								<td>
 									Start my master's studies in Computer Science at the University of Illinois Urbana-Champaign! 👩🏻‍💻🛫
 								</td>
 							</tr>
 							<tr>
-								<th scope="row" style="width: 80px;">Mar. 14,<br>2025</th>
+								<th scope="row" style="width: 80px;">Jun 27,<br>2025</th>
 								<td>
-									One paper received minor revisions in the first review round for MobileHCI 2025! Many thanks to my co-authors for their hard work!
+									One paper on mobile screenshot labeling tool was accept to UbiComp 2025 as a poster. Congrats to all the co-authors!
+								</td>
+							</tr>
+							<tr>
+								<th scope="row" style="width: 80px;">May 30,<br>2025</th>
+								<td>
+									One paper on LLM-powered notification summaries, which received minor revisions in the first review round, has now been accepted to MobileHCI 2025! Congrats and many thanks to the co-authors!
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 8,<br>2024</th>
 								<td>
-									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp/ISWC 2024</a> to present my paper.
-									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of our research and NotiManager, the application developed for this research.
+									Attended <a href="https://www.ubicomp.org/ubicomp-iswc-2024/" target="_blank">UbiComp 2024</a> to present my paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024.pdf" target="_blank"> pinning, sorting, and categorizing notifications</a>.
+									Explore the <a href="./notimanager" target="_blank">project site</a> for an overview of our research and NotiManager, the developed research application.
 								</td>
 							</tr>
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 2,<br>2024</th>
 								<td>
-									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting paper! 
+									Had a wonderful experience at <a href="https://mobilehci.acm.org/2024/index.php" target="_blank">MobileHCI 2024</a> presenting paper on <a href="./files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">user-assigned notification alerts</a>. 
 									Thanks to my co-authors and the conference organizers for this opportunity!
 								</td>
 							</tr>
-							<tr>
+							<!--<tr>
 								<th scope="row" style="width: 80px;">Jul 2,<br>2024</th>
 								<td>
 									One paper on <a href="./files/NotiManager_Evaluation_IMWUT_2024.pdf" target="_blank">notification management</a> is accepted to IMWUT (UbiComp) 2024! 
 									Many thanks to my collaborators! 🎉
 								</td>
-							</tr>
-							<tr>
+							</tr>-->
+							<!--<tr>
 								<th scope="row" style="width: 80px;">Jun 18,<br>2024</th>
 								<td>
 									One paper on <a href="./files/Alert_Assistance_MobileHCI_2024.pdf" target="_blank">user-assigned notification alerts</a> is accepted to MobileHCI 2024! 
 									Congrats to the co-authors! 
 								</td>
-							</tr>
+							</tr>-->
 							<!--<tr>
 								<th scope="row" style="width: 80px;">Dec 26,<br>2023</th>
 								<td>
@@ -159,7 +165,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Oct 10,<br>2023</th>
 								<td>
-									Presented my leading project as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp/ISWC 2023</a>. 
+									Presented my leading project on <a href="files/NotiManager_UbiComp_2023.pdf" target="_blank">hybrid notification management methods</a>  as a poster at <a href="https://www.ubicomp.org/ubicomp-iswc-2023/" target="_blank">UbiComp 2023</a>. 
 								</td>
 							</tr>
 							<tr>
