--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<!--<li><a href="#extracurricular_activities" class="button col-4">More</a></li>-->
 					</ul>
 					<ul class="icons">
-						<li><a title="Email" href="mailto:yon9hanlin@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a title="Email" href="mailto:yonghan5@illinois.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<!--<li><a title="X (Twitter)" href="https://x.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">X (Twitter)</span></a></li>-->
 						<!--<li><a title="Mastodon" href="https://hci.social/@yonghan" target="_blank" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>-->
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
@@ -98,7 +98,7 @@
 						 I'm always happy to connect, chat, and collaborate with others.</div>
 					</p>-->
 					<p>					
-						<i class="fas fa-envelope" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"> Email:</i><a href="mailto:yon9hanlin@gmail.com" target="_blank">yon9hanlin [at] gmail [dot] com </a> 
+						<i class="fas fa-envelope" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"> Email:</i><a href="mailto:yonghan5@illinois.edu" target="_blank">yonghan5 [at] illinois [dot] edu </a> 
 						<!--<i class="fab fa-twitter" style="padding:0 10px 0 0;color: #035772;vertical-align: middle;"></i><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" >@yoonghaan</a>-->	
 					</p>					
 				</header>
