--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<link rel="icon" type="image/x-icon" href="images/logo.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
+		<meta name="description" content="Yong-Han Lin's personal website, she is currently a CS master student at UIUC." />
 		<meta name="author" content="Yong-Han Lin">
 		<meta property="og:title" content="Yong-Han Lin" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://yonghanlin.github.io/" />
 		<meta property="og:image" content="images/avatar_new.jpg" />
-		<meta property="og:description" content="Yong-Han Lin's personal website, she is currently a Human-Computer Interaction (HCI) research assistant at Taiwan's National Yang-Ming Chiao-Tung University." />
+		<meta property="og:description" content="Yong-Han Lin's personal website, she is currently a CS master student at UIUC." />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets\css\academicons-1.9.2\css/academicons.min.css">
 		
@@ -33,7 +33,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl enjoying a beautiful day and smiling at Malibu Beach." /></div>
+				<div class="image avatar"><img src="images/avatar_new.jpg" alt="A girl smiling." /></div>
 				<div id="main_name">
 				Yong-Han Lin / 林詠涵 <!--&nbsp;<img class="logo" src="images/taiwan.png">-->
 				</div>
@@ -73,12 +73,12 @@
 		
 					<p>
 						Hi! I am Yong-Han, a first-year master's student in <a href="https://siebelschool.illinois.edu/" target="_blank">Computer Science</a> at the <img class="logo" src="images/uiuc_logo.png"><a href="https://illinois.edu/" target="_blank">University of Illinois Urbana-Champaign</a>. 
-						Before starting my graduate studies, I worked on research that supports researchers in analyzing people's use of mobile media, aiming to ultimately improve people's experiences with their phones.
+						Before starting my graduate studies, I worked on building research applications and studying people's use of mobile media and notifications, aiming to improve their experiences with their phones.
 						I am fortunate to be advised by <a href="https://www.armuro.info/" target="_blank">Dr. Yung-Ju Chang</a>.
 					</p>
 					<p>
 						As a student researcher and software engineer, I focus on projects related to advancing human-computer interaction and the use of machine learning models. 
-						I design, build, and study intelligent systems to empower users to consume and interact with digital information and technology more effectively.
+						I design, build, and study intelligent systems to empower users to consume and interact with digital information more effectively.
 						<!--My goal is to empower people to be able to use technologies as helpful tools that enhance their lives, enabling them to maintain control over the use and avoid negative impacts on their well-being.-->
 						In my recent work, I designed and built an <a href="./notimanager" target="_blank">intelligent notification system</a> to facilitate users' workflows in reading and handling notifications. 
 						This was achieved through automated sorting and categorization, complemented by manual functions for users to adjust these automations.
@@ -111,6 +111,12 @@
 					<table class="table">
 						<tbody>
 							<tr>
+								<th scope="row" style="width: 80px;">Jan 15,<br>2026</th>
+								<td>
+									One paper using <a href="https://doi.org/10.1145/3714394.3754395" target="_blank"> PULSE </a> to study experience with phone use was conditionally accepted to CHI 2026 as a full paper! Congrats and many thanks to the co-authors!
+								</td>
+							</tr>
+							<tr>
 								<th scope="row" style="width: 80px;">Aug 25,<br>2025</th>
 								<td>
 									Start my master's studies in Computer Science at the University of Illinois Urbana-Champaign! 👩🏻‍💻🛫
@@ -119,7 +125,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Jun 27,<br>2025</th>
 								<td>
-									One paper on mobile screenshot labeling tool was accept to UbiComp 2025 as a poster. Congrats to all the co-authors!
+									One paper on mobile screenshot labeling tool was accepted to UbiComp 2025 as a poster. Congrats to all the co-authors!
 								</td>
 							</tr>
 							<tr>
@@ -443,11 +449,11 @@
 								<a href="./more_about_me/index.html#other" target="_blank">trying something cool</a>
 							</li>-->
 							<li>
-								exploring Google Maps to find good restaurants  
+								exploring Google Maps to find good caffe and restaurants  
 							</li>
-							<li>
+							<!--<li>
 								playing Mario Kart 🚦
-							</li>
+							</li>-->
 						</ul>
 					</div>
 				</p>
