--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<tr>
 								<th scope="row" style="width: 80px;">Jan 15,<br>2026</th>
 								<td>
-									One paper using <a href="https://doi.org/10.1145/3714394.3754395" target="_blank"> PULSE </a> to study experience with phone use was conditionally accepted to CHI 2026 as a full paper! Congrats and many thanks to the co-authors!
+									One paper using <a href="https://doi.org/10.1145/3714394.3754395" target="_blank"> PULSE </a> to study experience with phone use has been conditionally accepted to CHI 2026! Congrats and many thanks to the co-authors!
 								</td>
 							</tr>
 							<tr>
